# filelight

./: .craft.ini  .flatpak-manifest.json  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  AUTHORS  CMakeLists.txt  CMakePresets.json  CTestConfig.cmake  ChangeLog  INSTALL  Mainpage.dox  Makefile.am  Messages.sh  README  README.md  TODO  filelight.categories  filelight.lsm  make-dist-howto.text  make-l10n-dist.ruby  snapcraft.yaml
autopackage/: default.apspec  default.apspec.in
autotests/: CMakeLists.txt  directoryIteratorTest.cpp  localListerTest.cpp  scanManagerTest.cpp  test-config.h.cmake
autotests/core/: CMakeLists.txt  testFileTree.cpp  testFileTree.h
autotests/iterator-tree.in/: bar
doc/: CMakeLists.txt  Makefile.am  index.docbook
misc/: CMakeLists.txt  Makefile.am  filelight.desktop  filelight_part.desktop  filelight_partui.rc  filelightpart.desktop  filelightpartui.rc  filelightrc  filelightui.rc  hisc-apps-filelight.svgz  org.freedesktop.portal.Documents.xml  org.kde.filelight.appdata.xml  org.kde.filelight.desktop  servicemenu.desktop
po/ar/: filelight.po
po/ast/: filelight.po
po/az/: filelight.po
po/bg/: filelight.po
po/bs/: filelight.po
po/ca/: filelight.po
po/ca/docs/filelight/: index.docbook
po/ca@valencia/: filelight.po
po/cs/: filelight.po
po/da/: filelight.po
po/de/: filelight.po
po/de/docs/filelight/: index.docbook
po/el/: filelight.po
po/en_GB/: filelight.po
po/eo/: filelight.po
po/es/: filelight.po
po/es/docs/filelight/: index.docbook
po/et/: filelight.po
po/et/docs/filelight/: index.docbook
po/eu/: filelight.po
po/fi/: filelight.po
po/fr/: filelight.po
po/fr/docs/filelight/: index.docbook
po/ga/: filelight.po
po/gl/: filelight.po
po/he/: filelight.po
po/hi/: filelight.po
po/hu/: filelight.po
po/ia/: filelight.po
po/id/: filelight.po
po/ie/: filelight.po
po/is/: filelight.po
po/it/: filelight.po
po/it/docs/filelight/: index.docbook
po/ja/: filelight.po
po/ka/: filelight.po
po/kk/: filelight.po
po/ko/: filelight.po
po/lt/: filelight.po
po/lv/: filelight.po
po/mr/: filelight.po
po/nb/: filelight.po
po/nds/: filelight.po
po/nl/: filelight.po
po/nl/docs/filelight/: index.docbook
po/nn/: filelight.po
po/pa/: filelight.po
po/pl/: filelight.po
po/pt/: filelight.po
po/pt/docs/filelight/: index.docbook
po/pt_BR/: filelight.po
po/pt_BR/docs/filelight/: index.docbook
po/ro/: filelight.po
po/ru/: filelight.po
po/ru/docs/filelight/: index.docbook
po/sa/: filelight.po
po/sk/: filelight.po
po/sl/: filelight.po
po/sl/docs/filelight/: index.docbook
po/sr/: filelight.po
po/sr@ijekavian/: filelight.po
po/sr@ijekavianlatin/: filelight.po
po/sr@latin/: filelight.po
po/sv/: filelight.po
po/sv/docs/filelight/: index.docbook
po/ta/: filelight.po
po/tr/: filelight.po
po/tr/docs/filelight/: index.docbook
po/ug/: filelight.po
po/uk/: filelight.po
po/uk/docs/filelight/: index.docbook
po/zh_CN/: filelight.po
po/zh_TW/: filelight.po
src/: CMakeLists.txt  Config.cpp  Config.h  Makefile.am  builder.cpp  builder.h  contextMenuContext.cpp  contextMenuContext.h  define.h  dialog.ui  directoryEntry.h  directoryIterator.cpp  directoryIterator.h  dropperItem.cpp  dropperItem.h  fileCleaner.cpp  fileCleaner.h  fileModel.cpp  fileModel.h  fileTree.cpp  fileTree.h  filelight.cpp  filelight.desktop  filelight.h  filelight_partui.rc  filelightpart.cpp  filelightpart.h  filelightrc  filelightsettings.kcfg  filelightui.rc  filemap.cpp  filemap.h  filetree.h  hicolor.qrc  historyAction.cpp  historyAction.h  historyaction.cpp  historyaction.h  localLister.cpp  localLister.h  (+38 more)
src/app/: CMakeLists.txt  Makefile.am  crashHandler.cpp  crashHandler.h  historyAction.cpp  historyAction.h  main.cpp  mainWindow.cpp  mainWindow.h
src/kradialmap/: Makefile.am  events.cpp  kradialmap.cpp  kradialmap.h  segmenttip.cpp  utils.cpp
src/part/: CMakeLists.txt  Config.cpp  Config.h  Makefile.am  builder.cpp  debug.h  dialog.ui  disk.cpp  disk.h  diskLister.cpp  diskLister.h  events.cpp  fileTree.cpp  fileTree.h  labels.cpp  localLister.cpp  localLister.h  localListerQt.cpp  localListerQt.h  localListerUnix.cpp  localListerUnix.h  map.cpp  part.cpp  part.h  progressBox.cpp  progressBox.h  remoteLister.cpp  remoteLister.h  scan.cpp  scan.h  settingsDialog.cpp  settingsDialog.h  summaryWidget.cpp  summaryWidget.h
src/part/radialMap/: CMakeLists.txt  Makefile.am  builder.cpp  builder.h  deleteDialog.cpp  deleteDialog.h  labels.cpp  map.cpp  map.h  radialMap.h  segmentTip.cpp  segmentTip.h  sincos.h  widget.cpp  widget.h  widgetEvents.cpp
src/qml/: AboutPage.qml  Action.qml  ActionMenuItem.qml  CenterShape.qml  GlobalMenu.qml  MapPage.qml  OverviewPage.qml  SegmentShape.qml  SettingsPage.qml  SettingsPageAppearance.qml  SettingsPageScanning.qml  ShapeToolTip.qml  main.qml  qml.qrc  qml.qrc.in
src/radialMap/: item.cpp  item.h  labels.cpp  labels.h  map.cpp  map.h  radialMap.cpp  radialMap.h  sincos.h  widget.cpp  widget.h  widgetEvents.cpp
